--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -45,7 +45,7 @@
 
         <!-- <h1 style="font-size: 1.5rem;">{{ site.title }}</h1> -->
         <h1 style="font-size: 1.5rem;">
-          Yanbo Zhang (<span style="font-family: 'KaiTi', sans-serif;">张延博</span>)
+          Yanlin Li (<span style="font-family: 'KaiTi', sans-serif;">李岩霖</span>)
         </h1>
 
         {% if site.position %}
