--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -103,7 +103,7 @@
       <br>
 
       {% if site.enable_footnote %}
-      <p><small>Powered by Jekyll and <a href="https://github.com/yaoyao-liu/minimal-light" target="_blank" rel="noopener">Minimal Light</a> theme.</small></p>
+      <p><center><small>&copy; Yanlin Li, 2024</small></center></p>
       {% endif %}
 
       </section>
